--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css"
     />
+    <!-- Linking CSS Reset -->
     <link rel="stylesheet" href="/assets/css/styles.css" />
+    <!-- Adding a favicon to webpage title -->
+    <link rel="icon" type="image/png" href="assets/img/fav-icon.png" />
   </head>
 
   <body>
