--- a/public/notes.html
+++ b/public/notes.html
@@ -15,7 +15,10 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
+    <!-- Linking CSS Reset -->
     <link rel="stylesheet" href="/assets/css/styles.css" />
+    <!-- Adding a favicon to webpage title -->
+    <link rel="icon" type="image/png" href="assets/img/fav-icon.png" />
   </head>
 
   <body>
